# nu_plugin_str_similarity

./: Cargo.toml  README.md
src/: main.rs  str_similarity.rs
