[package]
name = "nu_plugin_str_similarity"
version = "0.2.0"
authors = ["Darren Schroeder"]
edition = "2021"
repository = "https://github.com/fdncred/nu_plugin_str_similarity"
description = "a nushell plugin called str_similarity"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for local development, you can use a path dependency
nu-plugin = { path = "../nushell/crates/nu-plugin", version = "0.89.1" }
nu-protocol = { path = "../nushell/crates/nu-protocol", version = "0.89.1" }
# nu-plugin = "0.80.0"
# nu-protocol = "0.80.0"
textdistance = "1.0.2"
