[package]
name = "nu_plugin_str_similarity"
version = "0.6.0"
authors = ["Darren Schroeder"]
edition = "2021"
repository = "https://github.com/fdncred/nu_plugin_str_similarity"
description = "a nushell plugin called str_similarity"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nushell dependencies
nu-plugin = "0.97.1"
nu-protocol = "0.97.1"
nu-path = "0.97.1"

# for local development, you can use a path dependency
# nu-plugin = { path = "../nushell/crates/nu-plugin", version = "0.97.2" }
# nu-protocol = { path = "../nushell/crates/nu-protocol", version = "0.97.2" }
# nu-path = { path = "../nushell/crates/nu-path", version = "0.97.2" }

textdistance = "1.0.2"

[dev-dependencies]
# nu-plugin-test-support = "0.97.1"
# nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }

[profile.release]
opt-level = "s"     # Optimize for size
strip = "debuginfo"
lto = "thin"

[profile.dev]
opt-level = 0
